<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@color/lightGray">


    <TextView
        android:id="@+id/settingsTextView"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/settingsText"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/citySwitchTextView"
        android:layout_width="166dp"
        android:layout_height="50dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="64dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/citySwitchLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/locationSwitch"
        app:layout_constraintEnd_toStartOf="@+id/locationSwitchTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
        app:layout_constraintVertical_bias="0.965" />

    <TextView
        android:id="@+id/locationSwitchTextView"
        android:layout_width="154dp"
        android:layout_height="50dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/locationSwitchLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/locationSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
        app:layout_constraintVertical_bias="0.965" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/locationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="190dp"
        android:layout_marginBottom="93dp"
        android:gravity="center"
        android:onClick="switchChange"
        android:switchMinWidth="100dp"
        app:layout_constraintBottom_toTopOf="@+id/cityInputTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingsTextView"
        app:layout_constraintVertical_bias="1"
        app:layout_constraintWidth_default="spread" />

    <TextView
        android:id="@+id/cityInputTextView"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cityInputLabel"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cityInputEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/cityInputEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:hint="@string/cityHint"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="300dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="48dp"
        android:onClick="saveSettings"
        android:text="@string/saveSettingsLabel"
        android:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>